# auth-template

./: .env.example  .gitignore  README.md  compose.yaml  cz.toml  pyproject.toml  ruff.toml
docker/: dev.Dockerfile  prod.Dockerfile
src/server/: alembic.ini  load_data.py  main.py
src/server/alembic/: env.py
src/server/alembic/versions/: 2025_09_16_0415-637f8aec5be5_initial_schemas.py  2025_09_16_0430-3429e343f5c1_initial_dims.py  2025_09_16_0437-bfbf3825ead4_initial_auth.py
src/server/apps/auth/: deps.py  routes.py  utils.py
src/server/apps/auth/domain_model/entities/: __init__.py  association_tables.py  auth_token.py  auth_user.py
src/server/apps/auth/domain_model/repositories/: __init__.py  auth_token.py  auth_user.py
src/server/apps/auth/domain_model/use_cases/: create_session_token.py  hash_password.py  logout.py
src/server/apps/dim/domain_model/: entities.py  repositories.py
src/server/apps/dim/domain_model/use_cases/: create_department.py  update_department.py
src/server/config/: broker.py  database.py  logging.py  routes.py  settings.py
src/server/core/: deps.py  entities.py  exceptions.py  repository.py
src/server/services/: mailer.py
src/server/utils/: __init__.py  utils.py  validators.py
