[project]
name = ""
version = "0.1.10"
description = ""
requires-python = ">=3.13"
dependencies = [
    "aiokafka[lz4]>=0.12.0",
    "alembic-postgresql-enum>=1.8.0", # Расширение alembic для работы с Enum в PostgreSQL
    "alembic~=1.15", # Миграции
    "fastapi-mail~=1.4", # Mailing
    "fastapi-sse>=1.1.1",
    "fastapi[all]~=0.115", # Web Framework
    "faststream[kafka]>=0.5.48",
    "orjson~=3.10", # Сериализация и десериализация данных в формате json
    "psycopg[binary]~=3.2", # PosgreSQL DBAPI driver
    "pwdlib[argon2,bcrypt]>=0.2.1",
    "pyjwt~=2.10", # Password hashing
    "redis>=6.0.0",
    "sqlalchemy[asyncio]~=2.0", # ORM
    "starlette-admin~=0.14",
    "structlog>=25.4.0",
]


[dependency-groups]
dev = [
    "commitizen>=4.8.3",
    "go-task-bin>=3.44.1",
]
docs = [
    "mkdocs-material>=9.6.19",
    "mkdocstrings[python]>=0.30.0",
]
lint = [
    "ruff>=0.11.2",
]
